# knowledge-manager

./: .gitignore
jobs/ingester/: 00-import-chroma.sh  01-launch-chroma.sh  09-export-n-shutdown-chroma.sh  README.md  pyproject.toml
jobs/ingester/config/: default-config.yaml
jobs/ingester/script/: export-sqlite-and-link-knowledge.py
jobs/ingester/src/: api_client.py  chunking.py  config.py  embedding_model.py  ingester.py  main.py  parser.py  vectordb.py
jobs/ingester/src/models/: chunk.py  document.py  query_result.py
jobs/ingester/src/tests/: ingester_test.py  intester_test.py  vectordb_test.py
jobs/ingester/src/utils/: util.py
jobs/ingester/src/vessl/: api_client.py  config.py
jobs/retriever/: main.py  pyproject.toml  retriever_test.py
jobs/retriever/vessl/: api_client.py  config.py
services/deploy-chroma/: .gitignore  README.md  launch-chroma.sh  prepare-auth.py  prepare-auth.sh  pyproject.toml  service.yaml  test-auth.py
