[tool.poetry]
name = "llm-builder-knowledge-manager"
version = "0.1.0"
description = ""
authors = ["Kyle Lee <kyle@vessl.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chroma = "^0.2.0"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
