[tool.poetry]
name = "ingester"
version = "0.1.0"
description = ""
authors = ["Kyle Lee <kyle@vessl.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.2"
openai = "^1.43.0"
python-dotenv = "^1.0.1"
chromadb = "^0.5.5"
openparse = "^0.5.7"
langchain-text-splitters = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
