[tool.poetry]
name = "retriever"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
chromadb = "^0.5.5"
langchain = "^0.2.16"
langchain-openai = "^0.1.23"
langchain-chroma = "0.1.2"
langchain-community = "^0.2.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
